# xorc-events

./: .gitignore  CMakeLists.txt  README.md  application.proto  routable_message.proto
common/: device.proto  header.proto  rpc.proto  rpc_decoder.proto
examples/relocator/: raw_session_appNotInstalled.json  raw_session_appNotInstalled_02.json  raw_session_nonFunctional.json
http/: http_request.proto  http_response.proto
notification/: apple_notification.proto  google_notification.proto  push_notification.proto  push_result.proto  webpush_notification.proto
schema/: .gitignore  CMakeLists.txt  Makefile.sources  adjust_event.proto  backend_event.proto  common.proto  crm.proto  dmp_event.proto  dummy.proto  routable_message.proto  sdk_event.proto  sms_dlr.proto  system_event.proto  timer.proto
schema/common/: browser.proto  carrier.proto  device.proto  geo.proto  header.proto  header_decoder.proto  map_field_entry.proto  rpc.proto
schema/crm/: application.proto
schema/http/: http_request.proto  http_request_event.proto  http_response.proto  http_response_event.proto
schema/notification/: apn.proto  apns_headers.proto  apns_result.proto  apple_config.proto  apple_notification.proto  google_config.proto  google_notification.proto  notification_result.proto  push_notification.proto  push_result.proto  web_push_config.proto  webpush_notification.proto
